Fix post title alignment in the backend

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,7 +1,6 @@
 @mixin center-block {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	margin-inline: auto;
 }
 
 @mixin clearfix {
